Sort by-extension table by bytes descending   The aggregator's printed by-extension table now reads largest-footprint first instead of   alphabetical, so a 4.76 GB extension surfaces at the top of a 5 GB scan instead of being  buried behind a 9 MB one. A new byBytesDescending helper reshapes the snapshot's count   map for the extension table only — AggregationResult's own iteration order stays as the   builder produced it so any consumer wanting a diff-stable view still gets one. Equal byte   totals tiebreak on extension name ascending so the same input always renders the same   table.
  AggregationResult's compact constructor switches from Map.copyOf to
  Collections.unmodifiableMap(new LinkedHashMap<>(orig)) to fix a latent regression in the
  previous commit's defensive-copy work. Map.copyOf's iteration order is officially  unspecified, and the new order-preservation tests show it empirically reshuffles the date
  table (today → 2024 → 2025 → this month → ...) and the size table (LE_1KB → LE_20MB →  GT_1GB → LE_1GB → LE_1MB), both of which the renderer trusts the snapshot to preserve.
  The LinkedHashMap wrapper keeps the defensive copy while honoring the order the builder
  constructed.

  scripts/e2e-test.sh's aggregate_bucket_le1gb assertion was greping for "> 1MB and <= 1GB",
  a label that no longer exists in SizeBucket (the boundary moved to 20MB and a new LE_20MB
  bucket was inserted, but the test was never updated). The fixture's 1.05 MB file actually
  lands in LE_20MB, so the assertion now tracks that bucket; the fixture-description echo
  above it is corrected to match.

  Tests cover the bytes-desc sort, the alphabetical tiebreak, the missing-bytes-as-zero  fallback, and the date/size insertion-order preservation contract.